--- a/actividades.html
+++ b/actividades.html
@@ -86,7 +86,7 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- HEADER grande y IPAD-->
     <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.png');">
+        style="background-image: url('/assets/img/jaliscoDecide/actividades/header.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -97,7 +97,7 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- HEADER CEL-->
 
     <div class="page-header page-header-xs d-block d-sm-none" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.png');">
+        style="background-image: url('/assets/img/jaliscoDecide/actividades/header.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -109,20 +109,20 @@ The above copyright notice and this permission notice shall be included in all c
 
     <div class="main">
 
+
         <!-- SECCION 1 -->
         <div class="section  text-center">
             <div class="container">
 
-                <div class="row ml-auto mr-auto" style="justify-content: space-evenly;">
+                <div class="row ml-auto mr-auto" style="justify-content: space-evenly; padding-bottom: 14%;">
                     <!-- PARTE IZQUIERDA HEADER -->
                     <div class="col-md-12 ml-auto mr-auto" style="text-align: justify;">
                         <!-- <h2 class="title">Fin del Centralismo.</h2> -->
                         <h5>
 
-                            Si bien no somos un ente público fiscalizable ni formamos parte de ningún orden de gobierno
-                            o poder constitucional, queremos que el proceso —de interés público— sea transparente y
-                            accesible a todas las personas. En esta sección podrás encontrar las minutas y otra
-                            información relevante sobre las decisiones que tomemos como organismo.
+                            Aquí podrás encontrar la ruta que estamos construyendo para que Jalisco recupere su
+                            soberanía y dotar a las personas que vivimos en nuestro estado de más derechos, más
+                            libertades y más bienestar.
 
                         </h5>
                     </div>
@@ -133,139 +133,6 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
         </div>
         <!-- SECCION 1 -->
-
-        <!-- TAB HEADERS -->
-        <div class="section pt-0 pb-0 text-center ">
-            <div class="container">
-                <div class="bd-example bd-example-tabs">
-                    <nav>
-                        <div id="nav-tab" role="tablist" class="nav nav-tabs nav-fill">
-                            <a class="nav-item nav-link active title" style="color: black; " id="nav-home-tab"
-                                data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home"
-                                aria-selected="true">Minutas</a>
-                            <!-- style="color: black; background-color: #FFFEF5;" -->
-                            <!-- <a class="nav-item nav-link title" style="color: black; " id="nav-profile-tab"
-                                data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile"
-                                aria-selected="false">Egresos</a>
-                            <a class="nav-item nav-link title" style="color: black; " id="nav-contact-tab"
-                                data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact"
-                                aria-selected="false">Ingresos</a> -->
-                        </div>
-                    </nav>
-
-                </div>
-            </div>
-        </div>
-        <!-- TAB HEADERS -->
-
-
-        <!-- TABS CONTENT -->
-        <div class="section pt-0  text-center ">
-            <div class="container">
-                <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                        <!-- TITULO Y FECHA -->
-                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div> -->
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div> -->
-                        <!-- BOTON DL -->
-
-                        <!-- TITULO Y FECHA -->
-                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo2</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div> -->
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div> -->
-                        <!-- BOTON DL -->
-                    </div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                        <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo3</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div>
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div>
-                        <!-- BOTON DL -->
-
-                        <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo4</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div>
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div>
-                        <!-- BOTON DL -->
-                    </div>
-                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                        <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo5</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div>
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div>
-                        <!-- BOTON DL -->
-
-                        <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo6</h1>
-
-                        </div>
-                        <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div>
-                        <!-- TITULO Y FECHA -->
-
-                        <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div>
-                        <!-- BOTON DL -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- TABS CONTENT -->
 
 
     </div>
