--- a/debateNoticias/noticiaDemocracia.html
+++ b/debateNoticias/noticiaDemocracia.html
@@ -65,7 +65,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <a href="/equipo.html" class="nav-link">¿Quiénes Somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Actividades</a>
+                        <a href="/actividades.html" class="nav-link">Actividades</a>
                     </li>
                     <li class="nav-item">
                         <a href="/transparencia.html" class="nav-link">Transparencia</a>
@@ -235,21 +235,47 @@ The above copyright notice and this permission notice shall be included in all c
 
 
     <!-- FOOTER -->
-    <footer class="footer pb-0" style=" color: white; margin-bottom: 0px; padding-bottom: 0px; ">
+    <footer class="footer" style=" color: white;">
         <div class="container">
             <!-- IMAGOTIPO -->
             <!-- <div class="row " style="justify-content: left;">
 
-              <div class="col-md-2">
-                  <img class="img-fluid" src="/assets/img/jaliscoDecide/imagotipoFooter.png" alt="">
-              </div>
-          </div> -->
+                <div class="col-md-2">
+                    <img class="img-fluid" src="/assets/img/jaliscoDecide/imagotipoFooter.png" alt="">
+                </div>
+            </div> -->
 
             <!-- IMAGOTIPO -->
 
-            <div class="row pt-3" style="justify-content: flex-start;">
+            <div class="row pt-3 pb-3" style="justify-content: space-evenly;">
 
-                <div class="col-md-2 col-6">
+                <div class="col-md-4 col-4">
+                    <h6 class="nav-item nav-link" style="text-align:  center;">Contáctanos</h6>
+
+                    <div class="row" style="justify-content: space-evenly;">
+
+                        <div style="font-size: 1rem">
+                            <a href="https://twitter.com/JaliscoDecide" style="color: white;">
+                                <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
+                            </a>
+                            <!-- <a href="https://twitter.com/JaliscoDecide">
+                                @JaliscoDecide
+                            </a> -->
+                        </div>
+
+                        <!-- <div style="font-size: 1rem">
+                            <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
+                        </div>
+
+                        <div style="font-size: 1rem">
+                            <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                        </div> -->
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 col-4">
 
                     <nav class="footer-nav">
                         <h6 class="nav-item nav-link">Jalisco Decide</h6>
@@ -265,14 +291,14 @@ The above copyright notice and this permission notice shall be included in all c
 
                     </nav>
                 </div>
-                <div class="col-md-2 col-6">
+                <div class="col-md-4 col-4">
                     <nav class="footer-nav">
                         <h6 class="nav-item nav-link">Secciones</h6>
 
                         <a class="nav-item nav-link" style="color: white;" href="/index.html">Inicio</a>
                         <a class="nav-item nav-link" style="color: white;" href="/debate.html">Debate</a>
                         <a class="nav-item nav-link" style="color: white;" href="/equipo.html">¿Quiénes Somos?</a>
-                        <a class="nav-item nav-link" style="color: white;" href="#">Actividades</a>
+                        <a class="nav-item nav-link" style="color: white;" href="/actividades.html">Actividades</a>
                         <a class="nav-item nav-link" style="color: white;" href="/transparencia.html">Transparencia</a>
 
 
@@ -280,26 +306,11 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
             </div>
 
-            <!-- REDES -->
 
-            <div class="row" style="justify-content: right; margin-bottom: 0px; padding-bottom: 0px;">
-
-                <div class="mb-3" style="font-size: 1rem">
-                    <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
-                </div>
-
-                <div class="ml-4 mb-3" style="font-size: 1rem">
-                    <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
-                </div>
-
-                <div class="ml-4 mb-3 mr-1" style="font-size: 1rem">
-                    <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
-                </div>
-
-            </div>
         </div>
     </footer>
     <!-- FOOTER -->
+
     <!--   Core JS Files   -->
     <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
     <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
