--- a/equipo.html
+++ b/equipo.html
@@ -65,7 +65,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <a href="equipo.html" class="nav-link">¿Quiénes Somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Actividades</a>
+                        <a href="actividades.html" class="nav-link">Actividades</a>
                     </li>
                     <li class="nav-item">
                         <a href="transparencia.html" class="nav-link">Transparencia</a>
@@ -386,9 +386,10 @@ The above copyright notice and this permission notice shall be included in all c
                     <!-- SOCIAL MEDIA -->
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
-                        <i class="fa fa-twitter-square fa-lg  mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -426,8 +427,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -466,8 +468,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -504,8 +507,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -542,8 +546,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -580,8 +585,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -620,8 +626,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -661,8 +668,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -699,8 +707,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -739,8 +748,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -778,8 +788,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="row ml-auto mr-auto mt-3" style="justify-content: center; font-size: xx-large;">
 
                         <i class="fa fa-twitter-square fa-lg mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
-                        <i class="fa fa-instagram fa-lg ml-3" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-facebook-square fa-lg ml-3 mr-3" aria-hidden="true"></i>
+                        <i class="fa fa-instagram fa-lg ml-3 mr-3" aria-hidden="true"></i> -->
+                        <i class="fa fa-at ml-3" aria-hidden="true"></i>
 
                     </div>
                     <!-- SOCIAL MEDIA -->
@@ -807,9 +818,35 @@ The above copyright notice and this permission notice shall be included in all c
 
             <!-- IMAGOTIPO -->
 
-            <div class="row pt-3" style="justify-content: flex-start;">
+            <div class="row pt-3 pb-3" style="justify-content: space-evenly;">
 
-                <div class="col-md-2 col-6">
+                <div class="col-md-4 col-4">
+                    <h6 class="nav-item nav-link" style="text-align:  center;">Contáctanos</h6>
+
+                    <div class="row" style="justify-content: space-evenly;">
+
+                        <div style="font-size: 1rem">
+                            <a href="https://twitter.com/JaliscoDecide" style="color: white;">
+                                <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
+                            </a>
+                            <!-- <a href="https://twitter.com/JaliscoDecide">
+                                @JaliscoDecide
+                            </a> -->
+                        </div>
+
+                        <!-- <div style="font-size: 1rem">
+                            <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
+                        </div>
+
+                        <div style="font-size: 1rem">
+                            <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                        </div> -->
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 col-4">
 
                     <nav class="footer-nav">
                         <h6 class="nav-item nav-link">Jalisco Decide</h6>
@@ -825,14 +862,14 @@ The above copyright notice and this permission notice shall be included in all c
 
                     </nav>
                 </div>
-                <div class="col-md-2 col-6">
+                <div class="col-md-4 col-4">
                     <nav class="footer-nav">
                         <h6 class="nav-item nav-link">Secciones</h6>
 
                         <a class="nav-item nav-link" style="color: white;" href="index.html">Inicio</a>
                         <a class="nav-item nav-link" style="color: white;" href="debate.html">Debate</a>
                         <a class="nav-item nav-link" style="color: white;" href="equipo.html">¿Quiénes Somos?</a>
-                        <a class="nav-item nav-link" style="color: white;" href="#">Actividades</a>
+                        <a class="nav-item nav-link" style="color: white;" href="actividades.html">Actividades</a>
                         <a class="nav-item nav-link" style="color: white;" href="transparencia.html">Transparencia</a>
 
 
@@ -840,23 +877,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
             </div>
 
-            <!-- REDES -->
 
-            <div class="row" style="justify-content: right;">
-
-                <div class="mb-3" style="font-size: 1rem">
-                    <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
-                </div>
-
-                <div class="ml-4 mb-3" style="font-size: 1rem">
-                    <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
-                </div>
-
-                <div class="ml-4 mb-3 mr-1" style="font-size: 1rem">
-                    <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
-                </div>
-
-            </div>
         </div>
     </footer>
     <!-- FOOTER -->
@@ -882,47 +903,69 @@ The above copyright notice and this permission notice shall be included in all c
     <script>
         $('#collapseTeam1').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam2').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam3').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam4').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam5').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam6').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam7').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam8').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam9').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam10').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
         $('#collapseTeam11').on('shown.bs.collapse', function () {
             // do something…
-            this.scrollIntoView({behavior: "smooth"});
+            this.scrollIntoView({
+                behavior: "smooth"
+            });
         })
     </script>
     <!-- ONE PROFILE -->
