--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ The above copyright notice and this permission notice shall be included in all c
             <a href="equipo.html" class="nav-link">¿Quiénes Somos?</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">Actividades</a>
+            <a href="actividades.html" class="nav-link">Actividades</a>
           </li>
           <li class="nav-item">
             <a href="transparencia.html" class="nav-link">Transparencia</a>
@@ -107,8 +107,8 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="row ml-auto mr-auto" style="justify-content: space-evenly;">
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
-            <h2 class="title">Fin del Centralismo.</h2>
-            <h5 class="description">El centralismo es herencia del régimen autoritario del siglo pasado y afecta a
+            <h2 class="title">Fin del centralismo</h2>
+            <h5>El centralismo es herencia del régimen autoritario del siglo pasado y afecta a
               nuestras vidas de forma directa. El centralismo evita que decidamos sobre nuestro futuro, imponiendo
               decisiones desde la capital de México sin entender ni valorar la diversidad, las historias, las culturas y
               las realidades locales y regionales. Somos capaces de decidir por nosotrxs, sin que nadie imponga su
@@ -142,7 +142,7 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE DERECHA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">Ampliar Derechos</h2>
-            <h5 class="description">No luchamos exclusivamente para que Jalisco y los 31 Estados Libres y Soberanos que
+            <h5>No luchamos exclusivamente para que Jalisco y los 31 Estados Libres y Soberanos que
               conforman la Federación recuperemos el derecho a decidir sobre su futuro. Queremos que los municipios,
               localidades y comunidades recuperen la soberanía de forma radical para conducir sus vidas desde el poder
               colectivo. Todo el poder a la gente. Más democracia. </h5>
@@ -167,7 +167,7 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">¿Cómo?</h2>
-            <h5 class="description">No vamos a quedarnos de brazos cruzados viendo cómo decisiones autoritarias ponen en
+            <h5>No vamos a quedarnos de brazos cruzados viendo cómo decisiones autoritarias ponen en
               riesgo nuestro futuro. No aceptamos una refinería inviable, no aceptamos energía contaminante producida a
               partir del carbón, no aceptamos un tren ecocida que va a destruir la diversidad natural. Queremos energías
               limpias, movilidad sustentable, fortalecer a nuestro campo, vivienda digna, una economía solidaria, más
@@ -259,16 +259,42 @@ The above copyright notice and this permission notice shall be included in all c
       <!-- IMAGOTIPO -->
       <!-- <div class="row " style="justify-content: left;">
 
-              <div class="col-md-2">
-                  <img class="img-fluid" src="/assets/img/jaliscoDecide/imagotipoFooter.png" alt="">
-              </div>
-          </div> -->
+            <div class="col-md-2">
+                <img class="img-fluid" src="/assets/img/jaliscoDecide/imagotipoFooter.png" alt="">
+            </div>
+        </div> -->
 
       <!-- IMAGOTIPO -->
 
-      <div class="row pt-3" style="justify-content: flex-start;">
+      <div class="row pt-3 pb-3" style="justify-content: space-evenly;">
 
-        <div class="col-md-2 col-6">
+        <div class="col-md-4 col-4">
+          <h6 class="nav-item nav-link" style="text-align:  center;">Contáctanos</h6>
+
+          <div class="row" style="justify-content: space-evenly;">
+
+            <div style="font-size: 1rem">
+              <a href="https://twitter.com/JaliscoDecide" style="color: white;">
+                <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
+              </a>
+              <!-- <a href="https://twitter.com/JaliscoDecide">
+                            @JaliscoDecide
+                        </a> -->
+            </div>
+
+            <!-- <div style="font-size: 1rem">
+                        <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
+                    </div>
+
+                    <div style="font-size: 1rem">
+                        <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                    </div> -->
+
+          </div>
+
+        </div>
+
+        <div class="col-md-4 col-4">
 
           <nav class="footer-nav">
             <h6 class="nav-item nav-link">Jalisco Decide</h6>
@@ -284,14 +310,14 @@ The above copyright notice and this permission notice shall be included in all c
 
           </nav>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-md-4 col-4">
           <nav class="footer-nav">
             <h6 class="nav-item nav-link">Secciones</h6>
 
             <a class="nav-item nav-link" style="color: white;" href="index.html">Inicio</a>
             <a class="nav-item nav-link" style="color: white;" href="debate.html">Debate</a>
             <a class="nav-item nav-link" style="color: white;" href="equipo.html">¿Quiénes Somos?</a>
-            <a class="nav-item nav-link" style="color: white;" href="#">Actividades</a>
+            <a class="nav-item nav-link" style="color: white;" href="actividades.html">Actividades</a>
             <a class="nav-item nav-link" style="color: white;" href="transparencia.html">Transparencia</a>
 
 
@@ -299,23 +325,7 @@ The above copyright notice and this permission notice shall be included in all c
         </div>
       </div>
 
-      <!-- REDES -->
 
-      <div class="row" style="justify-content: right;">
-
-        <div class="mb-3" style="font-size: 1rem">
-          <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
-        </div>
-
-        <div class="ml-4 mb-3" style="font-size: 1rem">
-          <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
-        </div>
-
-        <div class="ml-4 mb-3 mr-1" style="font-size: 1rem">
-          <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
-        </div>
-
-      </div>
     </div>
   </footer>
   <!-- FOOTER -->
