--- a/actividades.html
+++ b/actividades.html
@@ -186,10 +186,10 @@ The above copyright notice and this permission notice shall be included in all c
                         <!-- class="nav-item nav-link" -->
 
                         <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin al
-                            Centralismo</a>
+                            centralismo</a>
                         <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
                             Derechos</a>
-                        <a class="nav-item nav-link" style="color: white;" href="index.html#Como">¿Cómo?</a>
+                        <a class="nav-item nav-link" style="color: white;" href="index.html#Como">Ganar el futuro</a>
                         <a class="nav-item nav-link" style="color: white;" href="index.html#Documentos">Documentos</a>
 
 
