--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="row ml-auto mr-auto" style="justify-content: space-evenly;">
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
-            <h2 class="title">¿Cómo?</h2>
+            <h2 class="title">Ganar el futuro</h2>
             <h5>No vamos a quedarnos de brazos cruzados viendo cómo decisiones autoritarias ponen en
               riesgo nuestro futuro. No aceptamos una refinería inviable, no aceptamos energía contaminante producida a
               partir del carbón, no aceptamos un tren ecocida que va a destruir la diversidad natural. Queremos energías
@@ -301,10 +301,10 @@ The above copyright notice and this permission notice shall be included in all c
             <!-- class="nav-item nav-link" -->
 
             <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin al
-              Centralismo</a>
+              centralismo</a>
             <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
               Derechos</a>
-            <a class="nav-item nav-link" style="color: white;" href="index.html#Como">¿Cómo?</a>
+            <a class="nav-item nav-link" style="color: white;" href="index.html#Como">Ganar el futuro</a>
             <a class="nav-item nav-link" style="color: white;" href="index.html#Documentos">Documentos</a>
 
 
